--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,9 @@
-name: Stock Scanner
+name: Stock & Crypto Scanner
 
 on:
-  schedule:
-    - cron: "30 13 * * 1-5"   # Mon–Fri (UTC)
   workflow_dispatch:
+  schedule:
+    - cron: "*/15 * * * *"   # every 15 minutes, 24x7 UTC
 
 jobs:
   scan:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
